--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
    height:auto;
    margin-left:auto;
    margin-right:auto;
+   margin-top: 20px;
+   border-radius: 20px;
   
  }
  body{
@@ -12,8 +14,74 @@ background-color: whitesmoke;
  }
  #img-div{
 background-color: white;
-
-
-
+width: 100%;
 
  }
+ h1{
+  font-size: 50px;
+
+ }
+ #img-caption{
+  font-size: 18px;
+
+ }
+ header{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #0f0202cb
+
+ }
+ #img-div{
+
+margin-left: 20px;
+margin-right: 20px;
+display: flex;
+flex-direction: column;
+
+ }
+ main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ }
+ h3{
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
+ }
+ #contant{
+display: flex;
+flex-direction: column;
+align-items: center;
+max-width: 50%;
+justify-content: center;
+ }
+li{
+
+margin-top: 30px;
+margin-bottom: 30px;
+
+
+}
+ul{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
+  
+}
+.bot-text{
+font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+font-style: italic;
+font-size: 18px;
+
+}
+#tribute-info{
+text-align: center;
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+
+}
+#footer{
+font-size: 20px;
+color: rgb(97, 97, 110);
+
+}
